--- a/main file/style.css
+++ b/main file/style.css
@@ -15,3 +15,56 @@ h2{
     color: white;
     font-family: 'Coiny', cursive;
 }
+#endGame{
+    position: relative;
+    width: 1080px;
+    height: 700px;
+    display: none;
+    background-image: url(src/pic/snake_grey.gif);
+    background-repeat: no-repeat;
+    background-size: contain;
+    border-color: aliceblue;
+    border-style: dotted;
+    border-width: 5px;
+}
+#grave{
+    position: relative;
+    top: 150px;
+    bottom: 50px;
+    left: 400px;
+    height: 500px;
+    width: 700px;
+}
+#youDied{
+    position: relative;
+    bottom: 500px;
+    font-size: 100px;
+    margin: 0px;
+    color: aliceblue;
+    font-family: 'Kaushan Script', cursive;
+}
+#score{
+    font-size: 30px;
+    position: relative;
+    bottom: 100px;
+    left: 400px;
+}
+.myButton{
+    position: relative;
+    bottom: 200px;
+}
+button{
+    height: 50px;
+    width: 500px;
+    margin: 20px 2px 1px;
+    border-radius: 3%;
+    border-bottom: 6px solid rgb(17, 3, 97);
+    background-color: rgba(70, 72, 102, 0.8);
+    font-family: 'Prompt', sans-serif;
+    color: white;
+    font-size: 20px;
+  }
+  button:hover{
+    background-color: rgb(89, 46, 206);
+    border-bottom: 6px solid aqua;
+  }
