--- a/main file/style.css
+++ b/main file/style.css
@@ -14,9 +14,11 @@ margin-left: auto;
 h2{
     color: white;
     font-family: 'Coiny', cursive;
+    font-size: 30px;
 }
 #endGame{
     position: relative;
+    bottom: 150px;
     width: 1080px;
     height: 700px;
     display: none;
@@ -26,6 +28,9 @@ h2{
     border-color: aliceblue;
     border-style: dotted;
     border-width: 5px;
+    transition: 1s;
+    animation-name: ani;
+    animation-duration: 1.5s;
 }
 #grave{
     position: relative;
@@ -43,17 +48,15 @@ h2{
     color: aliceblue;
     font-family: 'Kaushan Script', cursive;
 }
-#score{
+#nscore{
     font-size: 30px;
     position: relative;
     bottom: 100px;
     left: 400px;
 }
-.myButton{
+button{
     position: relative;
     bottom: 200px;
-}
-button{
     height: 50px;
     width: 500px;
     margin: 20px 2px 1px;
@@ -64,7 +67,11 @@ button{
     color: white;
     font-size: 20px;
   }
-  button:hover{
+button:hover{
     background-color: rgb(89, 46, 206);
     border-bottom: 6px solid aqua;
+}
+@keyframes ani {
+    from {bottom:1000px;}
+    to {bottom:150px;}
   }
