--- a/decor test/style.css
+++ b/decor test/style.css
@@ -21,6 +21,7 @@ margin: auto;
 }
 h2{
     color: white;
+    margin-left: 10px;
     font-family: spaceage;
     font-size: 30px;
 }
@@ -38,12 +39,12 @@ h2{
 }
 #keyW{
     position: fixed;
-   top: 50%;
-   left: 50%;
-   width: 500px;
-   height: 500px;
-   margin-top: -250px; /* Half the height */
-   margin-left: -250px;
+    top: 50%;
+    left: 50%;
+    width: 500px;
+    height: 500px;
+    margin-top: -250px;
+    margin-left: -250px;
 }
 #endGame{
     position: relative;
