Add number bomb

--- a/Snake 3018/style.css
+++ b/Snake 3018/style.css
@@ -1,6 +1,8 @@
+html{
+    cursor: url(http://cur.cursors-4u.net/nature/nat-9/nat870.cur), auto;
+}
 body{
     background-color: #000000;
-    cursor: url(http://cur.cursors-4u.net/nature/nat-9/nat870.cur), auto;
 }
 @font-face {
     font-family: spaceage;
