--- a/Snake 3018/style.css
+++ b/Snake 3018/style.css
@@ -1,5 +1,5 @@
 html{
-    cursor: url(http://cur.cursors-4u.net/nature/nat-9/nat870.cur), auto;
+    cursor: url(http://cur.cursors-4u.net/cursors/cur-2/cur117.cur), auto;
 }
 body{
     background-color: #000000;
