--- a/Snake 3018/style.css
+++ b/Snake 3018/style.css
@@ -1,5 +1,6 @@
 html{
     cursor: url(http://cur.cursors-4u.net/cursors/cur-2/cur117.cur), auto;
+    overflow: hidden;
 }
 body{
     background-color: #000000;
@@ -9,15 +10,15 @@ body{
     src: url(src/fonts/spaceage.ttf);
   }
 #myCanvas{
-border: 2px solid #1FD01F;
-box-shadow: 0px 0px 20px #1FEA1F;
-background-color: #1F1F1F;
-position: absolute;
-top: 0;
-left: 0;
-bottom: 0;
-right: 0;
-margin: auto;
+    border: 2px solid #1FD01F;
+    box-shadow: 0px 0px 20px #1FEA1F;
+    background-color: #1F1F1F;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
 }
 #myBomb{
     height: 0;
@@ -58,9 +59,9 @@ h2{
     background-image: url(src/pic/snake_grey.gif);
     background-repeat: no-repeat;
     background-size: contain;
-    border-color: aliceblue;
-    border-style: dotted;
-    border-width: 10px;
+    border-color: rgb(234, 76, 255);
+    border-style: solid;
+    border-width: 7px;
     transition: 1s;
     animation-name: ani;
     animation-duration: 1.5s;
@@ -79,13 +80,15 @@ h2{
     font-size: 150px;
     margin: 0px;
     color: aliceblue;
-    font-family: 'Monoton', cursive;;
+    font-family: 'Monoton', cursive;
+    text-shadow: 10px 10px rgba(255, 15, 175, 0.767);
 }
 #nscore{
     font-size: 30px;
     position: relative;
     bottom: 250px;
     left: 350px;
+    text-shadow: 5px 5px rgba(80, 5, 255, 0.541);
 }
 button{
     position: relative;
@@ -97,8 +100,9 @@ button{
     border-bottom: 6px solid rgb(17, 3, 97);
     background-color: rgba(70, 72, 102, 0.8);
     font-family: 'Prompt', sans-serif;
-    color: white;
+    color: rgb(255, 255, 255);
     font-size: 20px;
+    text-shadow: 0px 5px rgba(80, 5, 255, 0.541);
   }
 button:hover{
     background-color: rgb(89, 46, 206);
@@ -107,4 +111,4 @@ button:hover{
 @keyframes ani {
     from {bottom:1000px;}
     to {bottom:150px;}
-  }
+}
