--- a/Snake 3019/file/style.css
+++ b/Snake 3019/file/style.css
@@ -9,7 +9,8 @@ body{
 }
 @font-face {
     font-family: spaceage;
-    src: url(../src/fonts/spaceage.ttf);
+    src: local(spaceage), url("../src/fonts/spaceage.otf");
+    /*src: url(../src/fonts/spaceage.ttf);*/
   }
 #myCanvas{
     border: 2px solid #1FD01F;
