--- a/Snake 3019/file/style.css
+++ b/Snake 3019/file/style.css
@@ -11,13 +11,13 @@ body{
     font-family: 'Space age';
     src: url('../src/fonts/spaceage.ttf'),
 }
-    
+
 #myCanvas{
     border: 2px solid #1FD01F;
     box-shadow: 0px 0px 20px #1FEA1F;
     background-color: #1F1F1F;
     position: absolute;
-    top: 5%;
+    top: 3%;
     left: 0;
     right: 0;
     margin: auto;
@@ -33,10 +33,11 @@ h2{
     font-size: 30px;
 }
 #www{
-    position: relative;
-    margin-top: 650px;
+    position: absolute;
     display:block;
-    text-align: center;
+    margin: auto;
+    bottom: 5%;
+    left: 36%;
     font-size: 50px;
 }
 #pressStart{
@@ -57,21 +58,21 @@ h2{
     left: 50%;
     width: 500px;
     height: 500px;
-    margin-top: -280px;
+    margin-top: -250px;
     margin-left: -250px;
 }
 #endGame{
     position: relative;
     bottom: 150px;
     width: 1080px;
-    height: 695px;
+    height: 700px;
     display: none;
     background-image: url(../src/pic/snake_grey.gif);
     background-repeat: no-repeat;
     background-size: contain;
     border-color: rgb(253, 253, 253);
     border-style: solid;
-    border-width: 10px;
+    border-width: 7px;
     transition: 1s;
     animation-name: ani;
     animation-duration: 1.5s;
