--- a/Snake 3019/file/style.css
+++ b/Snake 3019/file/style.css
@@ -90,53 +90,41 @@ h2{
 #youDied{
     position: relative;
     bottom: 500px;
-    font-size: 150px;
+    font-size: 130px;
     margin: 0px;
     color: aliceblue;
     font-family: 'Monoton', cursive;
-    text-shadow: 10px 10px rgba(255, 15, 175, 0.767);
+    text-shadow:  0 0 10px rgb(52, 255, 1), 0 0 20px rgb(0, 148, 12), 0 0 30px rgb(255, 194, 221), 0 0 30px rgb(170, 255, 113), 0 0 50px rgb(70, 255, 147), 0 0 60px rgb(0, 255, 55);
 }
 #nscore{
     font-size: 30px;
     position: relative;
-    bottom: 250px;
+    bottom: 230px;
     left: 350px;
-    text-shadow: 5px 5px rgba(80, 5, 255, 0.541);
+    text-shadow:  0 0 10px rgb(200, 255, 1), 0 0 20px rgba(255, 251, 3, 0.658), 0 0 30px rgb(255, 217, 2), 0 0 30px rgba(255, 251, 0, 0.829)
 }
 button{
+    text-decoration: none;
+    display: inline-block;
     position: relative;
-    bottom: 300px;
+    bottom: 270px;
     height: 70px;
     width: 300px;
     margin: 20px 2px 1px;
     font-size: 30px;
     text-align: center;
-    border: 7px solid rgb(253, 123, 195);
-    color: rgb(253, 123, 195);
+    border: 7px solid rgba(255, 116, 236, 0.897);
+    color: rgb(247, 97, 234);
     border-radius: 50px;
     box-shadow: 0px 0px 30px rgb(245, 150, 202);
     font-family: 'Orbitron', sans-serif;
 }
-/* button{
-    position: relative;
-    bottom: 270px;
-    height: 50px;
-    width: 500px;
-    margin: 20px 2px 1px;
-    border-radius: 3%;
-    border-bottom: 6px solid rgb(17, 3, 97);
-    background-color: rgba(70, 72, 102, 0.8);
-    font-family: 'Prompt', sans-serif;
-    color: rgb(255, 255, 255);
-    font-size: 20px;
-    text-shadow: 0px 5px rgba(80, 5, 255, 0.541);
-  } */
+
 button:hover{
-    border: 7px solid rgb(147, 140, 243);
-    box-shadow: 0px 0px 30px rgb(167, 242, 255);
+    border: 7px solid rgba(174, 0, 255, 0.438);
+    box-shadow: 0px 0px 50px rgba(45, 248, 255, 0.753);
     font-family: 'Orbitron', sans-serif;
-    text-shadow: 0px 0px 30px rgb(167, 242, 255);
-    color: rgb(112, 208, 224);
+    color: rgb(167, 72, 255);
     cursor: url(http://ani.cursors-4u.net/cursors/cur-12/cur1136.ani), url(http://ani.cursors-4u.net/cursors/images12/cur1136.png), auto;
     touch-action: none;
 }
