--- a/Snake 3019/file/style.css
+++ b/Snake 3019/file/style.css
@@ -71,7 +71,7 @@ h2{
     width: 1080px;
     height: 695px;
     display: none;
-    background-image: url(../src/pic/snake_grey.gif);
+    background-image: url(../src/pic/snake.gif);
     background-repeat: no-repeat;
     background-size: contain;
     border-color: rgb(253, 253, 253);
@@ -81,38 +81,41 @@ h2{
     animation-name: ani;
     animation-duration: 1.5s;
 }
-#grave{
-    position: relative;
-    top: 100px;
-    bottom: 50px;
-    left: 400px;
-    height: 500px;
-    width: 700px;
-}
+
 #youDied{
-    position: relative;
-    bottom: 500px;
+    position: absolute;
+    bottom: 480px;
+    left: 85px;
     font-size: 130px;
     margin: 0px;
     color: aliceblue;
     font-family: 'Monoton', cursive;
     text-shadow:  0 0 10px rgb(52, 255, 1), 0 0 20px rgb(0, 148, 12), 0 0 30px rgb(255, 194, 221), 0 0 30px rgb(170, 255, 113), 0 0 50px rgb(70, 255, 147), 0 0 60px rgb(0, 255, 55);
 }
-#nscore{
-    font-size: 30px;
+#nscoreone{
+    font-size: 40px;
     position: relative;
-    bottom: 230px;
+    margin-top: 330px;
+    /* bottom: 230px; */
+    left: 350px;
+    text-shadow:  0 0 10px rgb(200, 255, 1), 0 0 20px rgba(255, 251, 3, 0.658), 0 0 30px rgb(255, 217, 2), 0 0 30px rgba(255, 251, 0, 0.829)
+}
+#nscoretwo{
+    font-size: 40px;
+    position: relative;
+    margin-top: 20px;
+    /* bottom: 230px; */
     left: 350px;
     text-shadow:  0 0 10px rgb(200, 255, 1), 0 0 20px rgba(255, 251, 3, 0.658), 0 0 30px rgb(255, 217, 2), 0 0 30px rgba(255, 251, 0, 0.829)
 }
 button{
     text-decoration: none;
     display: inline-block;
-    position: relative;
-    bottom: 270px;
+    position: absolute;
     height: 70px;
     width: 300px;
-    margin: 20px 2px 1px;
+    bottom: 40px;
+    left: 35vw;
     font-size: 30px;
     text-align: center;
     border: 7px solid rgba(255, 115, 0, 0.897);
