Edit color and position

--- a/Snake 3019/file/style.css
+++ b/Snake 3019/file/style.css
@@ -111,24 +111,22 @@ h2{
 button{
     text-decoration: none;
     display: inline-block;
-    position: absolute;
-    height: 70px;
-    width: 300px;
-    bottom: 40px;
-    left: 35vw;
+    position: relative;
+    top: 110px;
+    height: 60px;
+    width: 250px;
     font-size: 30px;
     text-align: center;
-    border: 7px solid rgba(255, 115, 0, 0.897);
-    color: rgb(255, 145, 0);
+    border: 3px solid rgb(166, 255, 1);
+    color: rgba(113, 173, 0, 0.822);
     border-radius: 50px;
-    text-shadow: 0 0 10px rgb(rgb(255, 166, 0)), 0 0 20px rgb(rgb(255, 115, 0)), 0 0 30px rgb(rgb(255, 230, 0)), 0 0 40px rgb(rgb(255, 230, 0));
-    box-shadow: 0 0 10px rgb(255, 153, 1), 0 0 20px rgba(255, 188, 111, 0.877), 0 0 30px rgba(255, 188, 111, 0.877);
+    box-shadow: 0 0 10px rgb(166, 255, 1), 0 0 20px rgba(144, 221, 2, 0.822), 0 0 30px rgba(125, 192, 0, 0.555);
     font-family: 'Orbitron', sans-serif;
 }
 
 button:hover{
-    border: 7px solid rgba(255, 0, 0, 0.719);
-    box-shadow: 0 0 10px rgb(248, 62, 62), 0 0 20px rgba(255, 11, 3, 0.452), 0 0 30px rgba(255, 11, 3, 0.973), 0 0 40px rgba(255, 3, 179, 0.973);
+    border: 3px solid rgba(255, 0, 0, 0.719);
+    box-shadow: 0 0 10px rgb(248, 62, 62), 0 0 20px rgba(255, 11, 3, 0.452), 0 0 30px rgba(255, 11, 3, 0.973), 0 0 40px rgba(255, 3, 179, 0.973), 0 0 50px rgba(255, 3, 179, 0.397), 0 0 60px rgba(255, 3, 179, 0.034), 0 0 0px rgba(255, 3, 179), 0 0 80px rgba(255, 3, 179);
     font-family: 'Orbitron', sans-serif;
     color: rgb(255, 72, 72);
     cursor: url(http://ani.cursors-4u.net/cursors/cur-12/cur1136.ani), url(http://ani.cursors-4u.net/cursors/images12/cur1136.png), auto;
